* changes v6.2.5 -> v6.2.x

##
## Algorithms
##

- Added hash-mode: Exodus Desktop Wallet (scrypt)
- Added hash-mode: Teamspeak 3 (channel hash)
- Added hash-mode: sha256($salt.sha256_bin($pass))
- Added hash-mode: PostgreSQL SCRAM-SHA-256

##
## Features
##

- Added support to use --debug-mode in attack-mode 9 (Association Attack)
- Added guess data to --status-json output
- Added hex format for --separator option

##
## Bugs
##

- Fixed functional error when nonce-error-corrections that were set on the command line in hash-mode 22000/22001 were not accepted
- Fixed handling of password candidates that are shorter than the minimum password length in Association Attack
- Fixed method of how OPTS_TYPE_AUX* kernels are called in an association attack, for example in WPA/WPA2 kernel
- Fixed missing option flag OPTS_TYPE_SUGGEST_KG for hash-mode 11600 to inform the user about possible false positives in this mode
- Fixed undefined function call to hc_byte_perm_S() in hash-mode 17010 on non-CUDA compute devices
- Fixed wordlist handling in -m 3000 when candidate passwords use the $HEX[...] syntax
- Fixed false negative on Unit Test with hash-type 25400
- Fixed bug on benchmark engine, from now it will not stop at the first error detected
- Fixed false negative on Unit Test in case of out-of-memory with grep in single mode
- Fixed Unit Test early exit on luks test file download/extract failure
- Fixed Unit Test salt-max in case of optimized kernel, with hash-type 22 and 23
- Fixed Unit Test false negative if there are spaces in the filesystem path to hashcat
- Fixed --hash-info example password output: force uppercase if OPTS_TYPE_PT_UPPER is set

##
## Technical
##

- Association Attack: Enable module specific pw_min and pw_max settings to avoid false positives in -a 9 attack-mode
- Backend Info: Added local memory size to output
- Kernels: Refactored standard kernel declaration to use a structure holding u32/u64 attributes to reduce the number of attributes